# Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: init-multi-db.sh
services/analytics-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/analytics-service/alembic/: env.py
services/analytics-service/alembic/versions/: 20260101_0001_initial_schema.py  20260107_0002_campaign_wallet_scoping.py  20260108_0003_stream_cursors.py
services/analytics-service/app/: main.py
services/analytics-service/app/api/: deps.py
services/analytics-service/app/api/routes/: campaigns.py  health.py  tips.py
services/analytics-service/app/core/: config.py  logging.py  request_id.py
services/analytics-service/app/db/: session.py
services/analytics-service/app/models/: campaign.py  stream_cursor.py  tip_event.py
services/analytics-service/app/schemas/: campaign.py  tip_event.py
services/analytics-service/app/services/: campaign_validator.py  redis_client.py  stellar_listener.py
services/analytics-service/tests/: test_campaign_validator.py  test_health.py  test_request_id.py  test_stellar_listener.py
services/gateway/: .env.example  .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
services/gateway/prisma/: schema.prisma
services/gateway/src/: app.ts  server.ts
services/gateway/tests/: auth.controller.test.ts  auth.middleware.test.ts  campaigns.controller.test.ts  crypto.test.ts  health.test.ts  (+7 more)
(+30 files in other folders)
